# shortcuts

./: .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
.agent/: README.md
.agent/claims/: add-html-runtime-profiles.json  audit-assurance-cleanup.json  bootstrap-session.json  final-openspec-sync.json  final-verification.json  full-repo-buildout.json  open-html-single-file-bundle.json  openspec-validation-fix.json
.agent/handoffs/: W6-ci-evidence.md  W6-docs-evidence.md  W6-launch.md  W6-security-evidence.md  add-html-runtime-profiles.md  audit-assurance-cleanup.md  bootstrap-session.md  final-openspec-sync.md  final-verification.md  full-repo-buildout.md  open-html-single-file-bundle.md  openspec-validation-fix.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  shortcut.yml
.github/workflows/: catalog.yml  ci.yml  license.yml  release.yml  runtime-macos.yml  scorecard.yml  security.yml
app-intents/: Package.swift  README.md
app-intents/Sources/ShortcutsAppIntentsLab/: AppShortcuts.swift  CleanClipboardIntent.swift  NetworkNoteIntent.swift
apps/docs/: eslint.config.mjs  next.config.mjs  package.json  source.config.ts  tsconfig.json
apps/docs/app/: global.css  layout.tsx  page.tsx
catalog/: catalog.json
openspec/: config.yaml  project.md
scripts/: check-licenses.py
shortcuts/open-html-in-safari/: README.md  shortcut.yml
tests/: test_workspace_smoke.py
(+147 files in other folders)
