[project]
name = "shortcuts-workspace"
version = "0.1.0"
requires-python = ">=3.13"

[tool.uv.workspace]
members = ["packages/shortcutkit"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PTH"]

[tool.pytest.ini_options]
addopts = "-q --cov=shortcutkit --cov-report=term-missing --cov-report=xml"
testpaths = ["packages/shortcutkit/tests", "tests"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.14.0", "ty>=0.0.1a20"]
